--- a/css/index.css
+++ b/css/index.css
@@ -7,12 +7,12 @@
 #portfolio{
     background-image: url(../images/p2.jpg)
 }
-#service{
+/* #service{
     background-image: url(../images/p3.jpg)
 }
 #contact{
     background-image: url(../images/p4.jpg)
-}
+} */
 
 html,
 body{
