--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,7 @@ section{
     height: 150px;
     margin: 20px;
     box-shadow: 0 0 10px #381D02;
+    margin-top: 100px;
 }
 
 .info .box h4{
@@ -93,3 +94,5 @@ section{
     color: #381D02;
     font-size: 15px;
 }
+
+
