--- a/css/index.css
+++ b/css/index.css
@@ -16,9 +16,16 @@
 
 html,
 body{
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
+    width: 1920px;
+    height: 1080px;
+    background-color: #E8DCD9;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+
 
 section{
     height: 100%;
@@ -73,7 +80,6 @@ section{
 
 .info{
     overflow: hidden;
-    
 }
 
 .info .box{
@@ -86,7 +92,7 @@ section{
     height: 150px;
     margin: 20px;
     box-shadow: 0 0 10px #381D02;
-    margin-top: 100px;
+    margin-top: 120px;
 }
 
 .info .box h4{
